styling for main team page

--- a/templates/main.html
+++ b/templates/main.html
@@ -13,9 +13,9 @@
 </head>
 
 <body>
-    <div class="container-fluid">
+    <div class="container-fluid my-top mb-3">
         <div class="row">
-            <div class="col-12 jumbotron mb-3 team-heading">
+            <div class="col-12 team-heading">
                 <h1 class="text-center">My Team</h1>
             </div>
         </div>
